--- a/style/style.css
+++ b/style/style.css
@@ -4,8 +4,7 @@
 
 *{
     font-family: "Poppins", sans-serif;
-    background-color: #ceddef;
-    padding: 2px;
+    /*padding: 2px; */
 }
 
 /*
@@ -38,6 +37,10 @@ header nav ul li{
     justify-content: flex-end;
 }*/ 
 
+body{
+  background-color: #ceddef;
+}
+
 .topo {
   /*background-color: #d9e6f5; /*Azul claro do Figma */
   padding: 1rem 2rem;
@@ -63,7 +66,7 @@ header nav ul li{
 }
 
 .logo img {
-  height: 40px; /* ou 28px, ou 24px */
+  height: 45px; /* ou 28px, ou 24px */
   width: auto; /* mantém a proporção */
 }
 
@@ -109,11 +112,21 @@ span{
   text-decoration: none;
   color: black;
   font-weight: 500;
+  transition: 0.2s ease-in-out;
 }
 
-.imagem-fundo{
-    width: 100%;
+.imagem-fundo img{
+    /*width: 100%;
     max-height: 100%;
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
     object-fit: cover;
-    opacity: 0.9;
+    opacity: 0.9;*/
+      width: 100%;
+      height: 100%;
+      display: flex;
+      object-fit: cover;
+      max-width: 100%;
 }
+
