--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ body{
 .topo {
   /*background-color: #d9e6f5; /*Azul claro do Figma */
   padding: 1rem 2rem;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  /*box-shadow: 0 2px 4px rgba(0,0,0,0.1);*/
 }
 
 .topo .container {
@@ -103,6 +103,8 @@ span{
 .menu {
   font-weight: bold;
   font-family: "Poppins", sans-serif;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.2); /* sombra leve para contraste */
+  text-align: center;
   display: flex;
   gap: 1rem;
   align-items: center;
@@ -115,19 +117,62 @@ span{
   transition: 0.2s ease-in-out;
 }
 
-.imagem-fundo img{  
-    /*width: 100%;
+/* .imagem-fundo img{   
+    width: 100%;
     max-height: 100%;
     width: 100vw;
     height: 100vh;
     background-size: cover;
     object-fit: cover;
-    opacity: 0.9;*/
+    opacity: 0.9;
       width: 100%;
       height: 100%;
       display: flex;
       object-fit: cover;
       max-width: 100%;
+} */
+
+ .secao-ofertas{
+  background-image: url("../img/image_fx.png");
+  background-repeat: no-repeat;
+  background-size: cover; 
+  width: 100%;
+  height: 900px;
+  display: flex;
+  max-width: 100%;
 }
 
+.frase-ofertas{
+  font-family: "Poppins", sans-serif; 
+  font-weight: bold;
+  font-size: 2.5rem;
+  color: black;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.2); /* sombra leve para contraste */
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  width: 100%;
+  padding: 60px;
+}
 
+.frase-ofertas h1{
+  width: 50%;
+}
+
+.primeiro-card{
+  /*background-image: url("../img/sofá-card1.png");*/
+  background-color: #ffffff;
+  height: 300px;
+  width: 500px;
+  border-radius: 10px;
+  align-items: flex-end;
+}
+
+.primeiro-card img{
+  width: 50%;
+  height: 65%;
+}
+
+.paragrafo-card1{
+  font-size: 1.6rem;
+}
