--- a/style/style.css
+++ b/style/style.css
@@ -145,7 +145,7 @@ span{
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-
+  padding: 20px;
 }
 
 .frase-ofertas{
@@ -188,7 +188,7 @@ span{
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  gap: 250px;
+  gap: 100px;
   width: 100%;
   padding: 20px 60px;
   margin-top: 0; 
@@ -247,6 +247,148 @@ span{
   width: 75%;
   height: 55%;
   align-items: center;
+}
+
+.secao-categorias{
+  background-color: #FEF4E8;
+  width: 100%;
+  /* height: 750px; */
+  padding: 20px;
+  border: none;
+  outline: none;  
+}
+
+.secao-categorias h1{
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.2); 
+  text-align: center;
+  padding: 30px;
+  font-size: 2.1rem;
+}
+
+.ambientes{
+  width: 100%;
+  flex-wrap: wrap;  
+  box-sizing: border-box;
+  display: flex;
+  gap: 100px;
+  padding: 20px ;
+}
+
+.ambientes h2{
+  font-size: 1.2rem;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.2); 
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
+}
+
+.cards{
+  width: 100%;
+  flex-wrap: wrap;  
+  box-sizing: border-box;
+  display: flex;
+  gap: 110px;
+  justify-content: center;
+}
+
+.card-sala{
+  background-color: #ffffff;
+  width: 200px;
+  height: 250px;
+  margin-bottom: 20px;
+  padding: 30px;
+  border-radius: 17px;
+  background-image: url("../img/card-sala.jpg");
+  background-size: cover;
+}
+
+.card-sala p{
+  font-family: "Baskervville", serif;
+  text-align: center;
+  margin-top: 215px;
+  font-size: 1.2rem;
+  font-weight: 200;
+  color: #ffffff;
+}
+
+.card-quarto{
+  background-color: #ffffff;
+  width: 200px;
+  height: 250px;
+  margin-bottom: 20px;
+  padding: 30px;
+  border-radius: 17px;
+  background-image: url("../img/card-quarto.jfif");
+  background-size: cover;
+}
+
+.card-quarto p{
+  font-family: "Baskervville", serif;
+  text-align: center;
+  margin-top: 215px;
+  font-size: 1.2rem;
+  font-weight: 200;
+  color: #ffffff;
+}
+
+.card-cozinha{
+  background-color: #ffffff;
+  width: 200px;
+  height: 250px;
+  margin-bottom: 20px;
+  padding: 30px;
+  border-radius: 17px;
+  background-image: url("../img/card-cozinha.jpg");
+  background-size: cover;
+}
+
+.card-cozinha p{
+  font-family: "Baskervville", serif;
+  text-align: center;
+  margin-top: 215px;
+  font-size: 1.2rem;
+  font-weight: 200;
+  color: #ffffff;
+}
+
+.card-banheiro{
+  background-color: #ffffff;
+  width: 200px;
+  height: 250px;
+  margin-bottom: 20px;
+  padding: 30px;
+  border-radius: 17px;
+  background-image: url("../img/card-banheiro.jfif");
+  background-size: cover;
+}
+
+.card-banheiro p{
+  font-family: "Baskervville", serif;
+  text-align: center;
+  margin-top: 215px;
+  font-size: 1.2rem;
+  font-weight: 200;
+  color: #ffffff;
+}
+
+.outros-ambientes{
+  background-color: #ffffff;
+  width: 200px;
+  height: 250px;
+  margin-bottom: 20px;
+  padding: 30px;
+  border-radius: 17px;
+  background-image: url("../img/outros-ambientes.jpg");
+  background-size: cover;
+}
+
+.outros-ambientes p{
+  font-family: "Baskervville", serif;
+  text-align: center;
+  margin-top: 215px;
+  font-size: 1.2rem;
+  font-weight: 200;
+  color: #ffffff;
 }
 
 footer{ 
